<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_presets"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/screen_presets" />
    <item
        android:id="@+id/menu_active"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/screen_active" />
    <item
        android:id="@+id/menu_history"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/screen_history" />
    <item
        android:id="@+id/menu_permanent"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/screen_permanent" />
    <item
        android:id="@+id/menu_inventory"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/screen_inventory" />
</menu>
